# interactive-map-builder

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pages.yml
agents/: openai.yaml
assets/examples/: SOURCES.md
assets/examples/csv-points/: map_spec.json  places.csv
assets/examples/linked-by-id/: context.geojson  map_spec.json  metrics.csv
assets/examples/map-list/: civic-other.geojson  map_spec.json  mixed-commercial.geojson  neighborhoods.geojson  parks.geojson  residential.geojson
assets/examples/multilayer/: bike_routes.geojson  boundary.geojson  districts.geojson  facilities.geojson  map_spec.json  places.geojson  routes.geojson
assets/templates/: map-list.html.j2  multilayer.html.j2  shared.css  shared.js
evals/: cases.yaml
references/: arcgis.md  data-provenance.md  design-guidelines.md  linked-analysis.md  map-spec.md  map-spec.schema.json  supported-inputs.md  wizard-flow.md
scripts/: build_demo_site.py  capture_readme_screenshots.py  demo_projects.py  map_builder.py  prepare_readme_examples.py
scripts/mapcore/: __init__.py  arcgis.py  inspect_data.py  loaders.py  normalize.py  paths.py  render_figure.py  render_html.py  report.py  resource_files.py  spec.py  spec_init.py  style.py  validate.py
scripts/mapcore/resources/: map-spec.schema.json
scripts/mapcore/resources/templates/: map-list.html.j2  multilayer.html.j2  shared.css  shared.js
tests/: conftest.py  test_arcgis.py  test_atlas_browser.py  test_atlas_demo.py  test_atlas_locale_contract.py  test_browser_smoke.py  test_cli_integration.py  test_contract_v1.py  test_demo_site.py  test_examples.py  test_inspect_and_init.py  test_loaders.py  test_render_figure.py  test_render_html.py  test_report.py  test_skill_structure.py  test_spec.py  test_style.py  test_validation.py
